--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "points-system",
+  "name": "point-system",
   "version": "2.0.0-beta",
-  "description": "",
+  "description": "A point-system for websites",
   "main": "script.js",
   "scripts": {
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
