--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
   "bugs": {
     "url": "https://github.com/Dealcraft/Points-system/issues"
   },
-  "homepage": "https://github.com/Dealcraft/Points-system#readme"
+  "homepage": "https://dealcraft.github.io/point-system"
 }
