--- a/.github/workflows/gpr-publish.yml
+++ b/.github/workflows/gpr-publish.yml
@@ -18,6 +18,6 @@ jobs:
           node-version: '16.x'
           registry-url: https://npm.pkg.github.com
       - run: npm ci
-      - run: npm publish --access=public
+      - run: npm publish --access=public --regitry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
