--- a/.github/workflows/gpr-publish.yml
+++ b/.github/workflows/gpr-publish.yml
@@ -15,10 +15,11 @@ jobs:
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: 16
           registry-url: https://npm.pkg.github.com
       - run: npm --version
       - run: npm ci
       - run: npm publish --registry=https://npm.pkg.github.com/ --scope=@dealcraft
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
