Timespans for item validity

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "point-system",
-  "version": "2.2.1",
+  "version": "2.3.0-beta",
   "description": "A point-system for websites",
   "main": "script.js",
   "unpkg": "script.js",
