--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,6 +5,12 @@ name: Publish Package to npmjs
 
 on:
   workflow_dispatch:
+    inputs:
+        tag:
+          description: 'Publishing tag'
+          required: true
+          default: 'latest'
+          
   release:
     types: [published]
 
@@ -18,6 +24,7 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --tag=$tag
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          tag: ${{ (github.event.release.prerelease == true && 'beta' || 'latest') || github.event.inputs.tag }}
