--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "point-system",
-  "version": "2.4.0-beta.1",
+  "version": "2.4.0",
   "description": "A point-system for websites",
   "main": "script.js",
   "unpkg": "script.js",
